[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Items/collectables/CollectablePickup.gd" type="Script" id=1]
[ext_resource path="res://scenes/Items/collectables/Paper_1.png" type="Texture" id=2]
[ext_resource path="res://scenes/_common/GUI/sfx/wow.ogg" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]

[node name="CollectiblePaper" type="Spatial"]
transform = Transform( 0.5, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 1 )
item_details = {
"is_unique": true,
"item_name": "paper",
"notes_for_journal": "A receipt? Matchbook cover? Recipe? Hmm. hard to make it out.",
"path_to_icon": "res://scenes/Items/collectables/Paper_1.png",
"path_to_popup_display_image": "res://scenes/Items/collectables/Paper_1.png"
}

[node name="Area" type="Area" parent="."]

[node name="Sprite" type="Sprite3D" parent="Area"]
transform = Transform( 0.125046, 0, 0, 0, -4.37114e-08, 1, 0, -0.125046, -5.46593e-09, 0, 0, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 0.49473, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="PickupNoise" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="finished" from="PickupNoise" to="." method="_on_PickupNoise_finished"]
